[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/interface/interface.gd" type="Script" id=1]
[ext_resource path="res://GUI/interface/bar/life_bar/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/interface/counter/cristals/CristalCounter.tscn" type="PackedScene" id=3]

[node name="Interface" type="Control" groups=[
"interface",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Bars" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="LifeBar" parent="Bars" index="0" instance=ExtResource( 2 )]

margin_right = 560.0
margin_bottom = 53.0

[node name="Counter" type="HBoxContainer" parent="." index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -140.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="CristalCounter" parent="Counter" index="0" instance=ExtResource( 3 )]

editor/display_folded = true
margin_right = 120.0
margin_bottom = 40.0

[connection signal="cristals_changed" from="." to="Counter/CristalCounter" method="_on_Interface_cristals_changed"]

[connection signal="health_changed" from="." to="Bars/LifeBar" method="_on_Interface_health_changed"]


